--- a/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/SimpleControls/ScoreBoardBlazor.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/SimpleControls/ScoreBoardBlazor.razor
@@ -11,7 +11,7 @@
                 {
                     if (c.IsHorizontal)
                     {
-                        <th style="vertical-align: bottom; padding-right: 10px">@c.Header</th>
+                        <th style="vertical-align: bottom; padding-right: 10px;">@c.Header</th>
                     }
                     else
                     {
@@ -21,11 +21,11 @@
                                 {
                                     @if (string.IsNullOrWhiteSpace(item.ToString()) == false)
                                     {
-                                        <div class="vertical" style="margin-top: -8px; padding-right: 5px">@item</div>
+                                        <div class="vertical" style="margin-top: -4px; padding-right: 5px;">@item</div>
                                     }
                                     else
                                     {
-                                        <div class="vertical" style="margin-top: -8px; padding-right: 5px">&nbsp;</div>
+                                        <div class="vertical" style="margin-top: -4px; padding-right: 5px;">&nbsp;</div>
                                     }
                                 }
                             </div>
