updated risk board game to .net 7.

--- a/Games/Risk/Blazor/AttackArmyComponent.razor
+++ b/Games/Risk/Blazor/AttackArmyComponent.razor
@@ -9,7 +9,7 @@
     return;
 }
 <ArmyBoard Text="Attack">
-    <BorderedSpace SpaceLocation="new()" SpaceSize="new(33, 33)" BorderColor="@cc.Aqua" BorderWidth="1">
+    <BorderedSpace SpaceLocation="new()" SpaceSize="new(33, 33)" BorderColor="@cc1.Aqua" BorderWidth="1">
         @if (HowManyArmies > 0)
         {
             <BasePieceGraphics LongestSize="33">
@@ -17,7 +17,7 @@
             </BasePieceGraphics>
         }
     </BorderedSpace>
-    <BorderedSpace SpaceLocation="new(33, 0)" SpaceSize="new(33, 33)" BorderColor="@cc.Aqua" BorderWidth="1">
+    <BorderedSpace SpaceLocation="new(33, 0)" SpaceSize="new(33, 33)" BorderColor="@cc1.Aqua" BorderWidth="1">
         @if (HowManyArmies > 1)
         {
             <BasePieceGraphics LongestSize="33">
@@ -25,7 +25,7 @@
             </BasePieceGraphics>
         }
     </BorderedSpace>
-    <BorderedSpace SpaceLocation="new(66, 0)" SpaceSize="new(33, 33)" BorderColor="@cc.Aqua" BorderWidth="1">
+    <BorderedSpace SpaceLocation="new(66, 0)" SpaceSize="new(33, 33)" BorderColor="@cc1.Aqua" BorderWidth="1">
         @if (HowManyArmies == 3)
         {
             <BasePieceGraphics LongestSize="33">
