--- a/Games/Risk/Blazor/DefenseArmyComponent.razor
+++ b/Games/Risk/Blazor/DefenseArmyComponent.razor
@@ -9,7 +9,7 @@
     return;
 }
 <ArmyBoard Text="Defend">
-    <BorderedSpace SpaceLocation="new(16, 0)" SpaceSize="new(33, 33)" BorderColor="@cc.Aqua" BorderWidth="1">
+    <BorderedSpace SpaceLocation="new(16, 0)" SpaceSize="new(33, 33)" BorderColor="@cc1.Aqua" BorderWidth="1">
         @if (HowManyArmies > 0)
         {
             <BasePieceGraphics LongestSize="33">
@@ -17,7 +17,7 @@
             </BasePieceGraphics>
         }
     </BorderedSpace>
-    <BorderedSpace SpaceLocation="new(49, 0)" SpaceSize="new(33, 33)" BorderColor="@cc.Aqua" BorderWidth="1">
+    <BorderedSpace SpaceLocation="new(49, 0)" SpaceSize="new(33, 33)" BorderColor="@cc1.Aqua" BorderWidth="1">
         @if (HowManyArmies == 2)
         {
             <BasePieceGraphics LongestSize="33">
