--- a/Games/Risk/_Imports.razor
+++ b/Games/Risk/_Imports.razor
@@ -18,7 +18,7 @@
 @using BasicGameFrameworkLibrary.Blazor.GameGraphics.Base
 @using BasicGameFrameworkLibrary.Blazor.GameGraphics.GamePieces
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.GameBoards
-@using cc = CommonBasicLibraries.BasicDataSettingsAndProcesses.SColorString
+@using cc1 = CommonBasicLibraries.BasicDataSettingsAndProcesses.SColorString
 @using BasicGameFrameworkLibrary.Core.Dice
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.ChoicePickers
 @using BasicBlazorLibrary.Components.BaseClasses
