--- a/Games/Risk/Blazor/ArmyBoard.razor
+++ b/Games/Risk/Blazor/ArmyBoard.razor
@@ -2,8 +2,8 @@
     <SvgBoard BoardSize="new(150, 20)"
               TargetHeight="6vh">
         <CenteredTextBlazor Text="@Text" 
-                            BorderColor="@cc.Black" 
-                            TextColor="@cc.Aqua" 
+                            BorderColor="@cc1.Black" 
+                            TextColor="@cc1.Aqua" 
                             FontSize="20"
                             BorderWidth="1" />
     </SvgBoard>
