--- a/Games/Risk/Blazor/TerritoryBlazor.razor
+++ b/Games/Risk/Blazor/TerritoryBlazor.razor
@@ -5,11 +5,11 @@
 <path style="opacity: 1; fill: @Territory.Color; fill-opacity: 1; stroke-width: @Territory.BorderWidth(_gameContainer); stroke: @Territory.GetBorderColor(_gameContainer); "
       d="@Territory.Name.GetPath()"
       @onclick="PrivateClick" />
-<BorderedSpace FillColor="@cc.LightGray"
+<BorderedSpace FillColor="@cc1.LightGray"
                ShapeCategory="BorderedSpace.EnumShapeCategory.Oval"
                SpaceSize="GetSize"
                SpaceLocation="@Territory.GetLabelLocation()"
-               BorderColor="@cc.Black"
+               BorderColor="@cc1.Black"
                BorderWidth="2">
-    <CenteredTextBlazor BorderWidth="0" BorderColor="@cc.Transparent" TextColor="@cc.Black" FontSize="12" Text="@Territory.Armies.ToString()" />
+    <CenteredTextBlazor BorderWidth="0" BorderColor="@cc1.Transparent" TextColor="@cc1.Black" FontSize="12" Text="@Territory.Armies.ToString()" />
 </BorderedSpace>
