updated countdown dice game to .net 7. also, updated the 21 dice game to use the new centered flex.

--- a/Games/A21DiceGame/_Imports.razor
+++ b/Games/A21DiceGame/_Imports.razor
@@ -17,3 +17,4 @@
 @using BasicGameFrameworkLibrary.Core.BasicGameDataClasses
 @using BasicGameFrameworkLibrary.Blazor.GameGraphics.Base
 @using BasicGameFrameworkLibrary.Blazor.GameGraphics.GamePieces
+@using cc1 = BasicGameFrameworkLibrary.Blazor.Helpers.CssHelpers;
