--- a/Games/Countdown/Blazor/Views/CountdownMainView.razor
+++ b/Games/Countdown/Blazor/Views/CountdownMainView.razor
@@ -3,8 +3,7 @@
     <GameBoardBlazor GameContainer="_gameContainer"
                      TargetHeight="25vh" />
 </div>
-
-<div class="@cc1." style="height: 22vh; display: flex; align-items: center;">
+<div class="@cc1.CenteredFlex" style="height: 22vh;">
     <GameButtonComponent CommandObject="EndCommand" Display="End Turn" />
     <GameButtonComponent CommandObject="HintsCommand" Display="Show Hints" />
     <DiceListConrolBlazor D="CountdownDice" Cup="@DataContext!.GetCup" TargetHeight="20vh" />
