--- a/Games/A21DiceGame/Blazor/Views/A21DiceGameMainView.razor
+++ b/Games/A21DiceGame/Blazor/Views/A21DiceGameMainView.razor
@@ -1,5 +1,5 @@
 @inherits BasicGameView<A21DiceGameMainViewModel>
-<div style="height: 22vh">
+<div class="@cc1.CenteredFlex" style="height: 22vh">
     <GameButtonComponent CommandObject="RollCommand" Display="Roll Dice" />
     <GameButtonComponent CommandObject="EndCommand" Display="End Turn" />
     <DiceListConrolBlazor D="SimpleDice" Cup="@DataContext!.GetCup" TargetHeight="20vh" />
