updated the basic multiplayer dice games to use the new centered flex.

--- a/Templates/BasicMultiplayerDiceGames/Blazor/Views/BasicMultiplayerDiceGamesMainView.razor
+++ b/Templates/BasicMultiplayerDiceGames/Blazor/Views/BasicMultiplayerDiceGamesMainView.razor
@@ -1,6 +1,6 @@
 @inherits BasicGameView<BasicMultiplayerDiceGamesMainViewModel>
 <p>Welcome to BasicMultiplayerDiceGames</p>
-<div style="height: 22vh">
+<div class="@css1.CenteredFlex" style="height: 22vh">
     <GameButtonComponent CommandObject="RollCommand" Display="Roll Dice" />
     <GameButtonComponent CommandObject="EndCommand" Display="End Turn" />
     <DiceListConrolBlazor D="SimpleDice" Cup="@DataContext!.GetCup" TargetHeight="20vh" />
