--- a/Templates/BasicMultiplayerDiceGames/_Imports.razor
+++ b/Templates/BasicMultiplayerDiceGames/_Imports.razor
@@ -17,3 +17,4 @@
 @using BasicGameFrameworkLibrary.Core.BasicGameDataClasses
 @using BasicGameFrameworkLibrary.Blazor.GameGraphics.Base
 @using BasicGameFrameworkLibrary.Blazor.GameGraphics.GamePieces
+@using css1 = BasicGameFrameworkLibrary.Blazor.Helpers.CssHelpers;
