--- a/Games/DeadDie96/_Imports.razor
+++ b/Games/DeadDie96/_Imports.razor
@@ -17,3 +17,4 @@
 @using BasicGameFrameworkLibrary.Core.BasicGameDataClasses
 @using BasicGameFrameworkLibrary.Blazor.GameGraphics.Base
 @using BasicGameFrameworkLibrary.Blazor.GameGraphics.GamePieces
+@using cc1 = BasicGameFrameworkLibrary.Blazor.Helpers.CssHelpers;
