--- a/Games/DiceDominos/Blazor/Views/DiceDominosMainView.razor
+++ b/Games/DiceDominos/Blazor/Views/DiceDominosMainView.razor
@@ -2,7 +2,7 @@
 <CascadingValue Value="7">
     <DominosGridBoardBlazor D="SimpleDominoInfo" DataContext="DataContext!.GameBoard" />
 </CascadingValue>
-<div style="height: 22vh">
+<div class="@cc1.CenteredFlex" style="height: 22vh">
     <GameButtonComponent CommandObject="RollCommand" Display="Roll Dice" />
     <GameButtonComponent CommandObject="EndCommand" Display="End Turn" />
     <DiceListConrolBlazor D="SimpleDice" Cup="@DataContext!.GetCup" TargetHeight="20vh" />
