--- a/Games/RollEm/Blazor/Views/RollEmMainView.razor
+++ b/Games/RollEm/Blazor/Views/RollEmMainView.razor
@@ -5,7 +5,7 @@
                          TargetHeight="85vh" />
     </StackItem>
     <StackItem>
-        <div style="height: 22vh">
+        <div class="@cc1.CenteredFlex" style="height: 22vh">
             <GameButtonComponent CommandObject="RollCommand" Display="Roll Dice" />
             <GameButtonComponent CommandObject="EndCommand" Display="End Turn" />
             <DiceListConrolBlazor D="SimpleDice" Cup="@DataContext!.GetCup" TargetHeight="20vh" />
