--- a/Games/RollEm/_Imports.razor
+++ b/Games/RollEm/_Imports.razor
@@ -18,3 +18,4 @@
 @using BasicGameFrameworkLibrary.Blazor.GameGraphics.Base
 @using BasicGameFrameworkLibrary.Blazor.GameGraphics.GamePieces
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.GameBoards
+@using cc1 = BasicGameFrameworkLibrary.Blazor.Helpers.CssHelpers;
