--- a/Games/SinisterSix/Blazor/Views/SinisterSixMainView.razor
+++ b/Games/SinisterSix/Blazor/Views/SinisterSixMainView.razor
@@ -1,5 +1,5 @@
 @inherits BasicGameView<SinisterSixMainViewModel>
-<div style="height: 22vh">
+<div class="@cc1.CenteredFlex" style="height: 22vh">
     <GameButtonComponent CommandObject="RollCommand" Display="Roll Dice" />
     <GameButtonComponent CommandObject="EndCommand" Display="End Turn" />
     <DiceListConrolBlazor D="EightSidedDice" Cup="@DataContext!.GetCup" TargetHeight="20vh" />
