updated think twice to .net 7.

--- a/Games/ThinkTwice/Blazor/ButtonDiceBlazor.razor
+++ b/Games/ThinkTwice/Blazor/ButtonDiceBlazor.razor
@@ -1,4 +1,4 @@
-﻿@using cc = CommonBasicLibraries.BasicDataSettingsAndProcesses.SColorString
+﻿@using c1 = CommonBasicLibraries.BasicDataSettingsAndProcesses.SColorString
 @if (Value == "")
 {
     return;
@@ -15,7 +15,7 @@
         <CenteredTextBlazor 
                            FontSize="90" 
                            BorderWidth="4"
-                           TextColor="@cc.Blue"
+                           TextColor="@c1.Blue"
                            Text="@Value" />
         @if (ButtonClicked.HasDelegate)
         {
