--- a/Games/ThinkTwice/_Imports.razor
+++ b/Games/ThinkTwice/_Imports.razor
@@ -20,3 +20,4 @@
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.GameBoards
 @using System.Drawing
 @using BasicBlazorLibrary.Components.CssGrids
+@using cc1 = BasicGameFrameworkLibrary.Blazor.Helpers.CssHelpers;
