--- a/Games/ThinkTwice/Blazor/Views/ThinkTwiceMainView.razor
+++ b/Games/ThinkTwice/Blazor/Views/ThinkTwiceMainView.razor
@@ -27,7 +27,7 @@
 <div>
     <GameButtonComponent CommandObject="MultiCommand" Display="Roll Multiplier Dice" />
 </div>
-<div style="height: 22vh">
+<div class="@cc1.CenteredFlex" style="height: 22vh">
     <GameButtonComponent CommandObject="RollCommand" Display="Roll Dice" />
     <GameButtonComponent CommandObject="EndCommand" Display="End Turn" />
     <DiceListConrolBlazor D="SimpleDice" Cup="@DataContext!.GetCup" TargetHeight="20vh" />
