--- a/Games/YachtRace/Blazor/Views/YachtRaceMainView.razor
+++ b/Games/YachtRace/Blazor/Views/YachtRaceMainView.razor
@@ -1,5 +1,5 @@
 @inherits BasicGameView<YachtRaceMainViewModel>
-<div style="height: 22vh">
+<div class="@cc1.CenteredFlex" style="height: 22vh">
     <GameButtonComponent CommandObject="RollCommand" Display="Roll Dice" />
     <GameButtonComponent CommandObject="EndCommand" Display="Has 5 Of A Kind" />
     <DiceListConrolBlazor D="SimpleDice" Cup="@DataContext!.GetCup" TargetHeight="20vh" />
