--- a/Games/ClueBoardGame/Blazor/DetectiveGraphicsBlazor.razor
+++ b/Games/ClueBoardGame/Blazor/DetectiveGraphicsBlazor.razor
@@ -19,8 +19,8 @@
         </DetectiveRawBoard>
     </div>
 }*@
-<DetectiveRawBoard TargetWidth="@pp.TargetGridWidth"
-                   BoardSize="@pp.MainSize">
+<DetectiveRawBoard TargetWidth="@pp1.TargetGridWidth"
+                   BoardSize="@pp1.MainSize">
     @foreach (var item in DetectiveList.Values)
     {
         var current = GetButtonLocation(item);
