--- a/Games/ClueBoardGame/Blazor/Views/ClueBoardGameMainView.razor
+++ b/Games/ClueBoardGame/Blazor/Views/ClueBoardGameMainView.razor
@@ -42,7 +42,7 @@
                 BackgroundColor="aqua"
                 TargetHeight="6vh" />
         </div>
-        <div style="font-size: 8vh; color: white">
+        <div class="@css1.CenteredFlex" style="font-size: 8vh; color: white">
             @DataContext!.VMData.LeftToMove
             <DiceListConrolBlazor D="SimpleDice" Cup="@DataContext!.GetCup" TargetHeight="8vh" />
         </div>
