--- a/Games/ClueBoardGame/_Imports.razor
+++ b/Games/ClueBoardGame/_Imports.razor
@@ -25,4 +25,5 @@
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.SpecializedFrames.Hands
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.SpecializedFrames.SingleMiscPiles
 @using ClueBoardGame.Core.Cards
-@using pp = ClueBoardGameBlazor.GlobalDetectiveGrid
+@using pp1 = ClueBoardGameBlazor.GlobalDetectiveGrid
+@using css1 = BasicGameFrameworkLibrary.Blazor.Helpers.CssHelpers;
