--- a/Games/ClueBoardGame/Blazor/RoomGraphics.razor
+++ b/Games/ClueBoardGame/Blazor/RoomGraphics.razor
@@ -1,11 +1,11 @@
 ﻿@using CommonBasicLibraries.CollectionClasses;
-@using gg = ClueBoardGame.Core.Logic.GameBoardGraphicsCP;
-@using p = BasicGameFrameworkLibrary.Core.GameboardPositionHelpers.PositionPieces;
+@using gg1 = ClueBoardGame.Core.Logic.GameBoardGraphicsCP;
+@using p1 = BasicGameFrameworkLibrary.Core.GameboardPositionHelpers.PositionPieces;
 @{
     int x = 0;
     BasicList<WeaponInfo> weaponList;
     BasicList<CharacterInfo> characterList;
-    SizeF spaceSize = new SizeF(gg.SpaceSize, gg.SpaceSize);
+    SizeF spaceSize = new SizeF(gg1.SpaceSize, gg1.SpaceSize);
 }
 @foreach (var room in GraphicsData!.GameContainer!.RoomList.Values)
 {
@@ -16,7 +16,7 @@
     }
     weaponList = GraphicsData.GameContainer.WeaponsInRoom(x);
     characterList = GraphicsData.GameContainer.CharactersInRoom(x);
-    p.ClearArea(room.Space);
+    p1.ClearArea(room.Space);
     <RoomWeaponGraphics GraphicsData="GraphicsData" Room="room" Weapons="weaponList" />
     <RoomCharacterGraphics GraphicsData="GraphicsData" Room="room" Characters="characterList" SpaceSize="spaceSize" />
 }
