Added ability to do complete refresh. However, only for multiplayer games that are wasm. Also, made sure that if the default loader processes are used, then can no longer do native for games that are not intended for single player since reload does not work so well for native apps.

--- a/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
+++ b/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
@@ -1,5 +1,12 @@
 ﻿@page "/"
 <MainPage>
+    @if (CanStartLoading() == false)
+    {
+        <div>
+            Sorry, native apps are no longer supported for the game package except for single player games because many issues.
+        </div>
+        return;
+    }
     @if (_loadedOnce == false)
     {
         <div>Loading Game Package Loader........</div>
