--- a/Standard/BasicGameFrameworkLibrary/Blazor/Views/MultiplayerOpeningView.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/Views/MultiplayerOpeningView.razor
@@ -34,6 +34,16 @@
             <GameButtonComponent StartOnNewLine="true" CommandObject="DataContext.StartCommand" CommandParameter="0" Display="Start Game With No Extra Players" />
             <GameButtonComponent StartOnNewLine="true" CommandObject="DataContext.DisconnectEverybodyCommand" Display="Disconnect Everybody" />
         }
+        if (GameData.MinPlayers > 2 && DataContext.ExtraOptionsVisible == false)
+        {
+            <GameButtonComponent StartOnNewLine="true" CommandObject="DataContext.StartCommand" CommandParameter="0" Display="Start Game With No Extra Players" />
+            <GameButtonComponent StartOnNewLine="true" CommandObject="DataContext.DisconnectEverybodyCommand" Display="Disconnect Everybody" />
+        }
+        @if (GameData.MinPlayers == 4 && DataContext.HostCanStart)
+        {
+            <GameButtonComponent StartOnNewLine="true" CommandObject="DataContext.StartCommand" CommandParameter="0" Display="Start Game" />
+            <GameButtonComponent StartOnNewLine="true" CommandObject="DataContext.DisconnectEverybodyCommand" Display="Disconnect Everybody" />
+        }
         @if (DataContext.HostCanStart)
         {
             <LabelGridComponent DataContext="DataContext" Labels="_labels" />
