Removed Bidding Screen.

--- a/Games/Rook/Blazor/Views/RookBiddingView.razor
+++ b/Games/Rook/Blazor/Views/RookBiddingView.razor
@@ -1,4 +1,4 @@
-﻿@inherits BasicGameView<RookBiddingViewModel>
+﻿@*@inherits BasicGameView<RookBiddingViewModel>
 @if (DataContext == null)
 {
     return;
@@ -13,4 +13,4 @@
         <GameButtonComponent CommandObject="PassCommand"
                              Display="Pass" />
     </div>
-</BaseFrameBlazor>
+</BaseFrameBlazor>*@
