--- a/Games/Rook/Blazor/BiddingComponent.razor
+++ b/Games/Rook/Blazor/BiddingComponent.razor
@@ -5,4 +5,14 @@
     </div>
     return;
 }
-Bidding So Far
+<BaseFrameBlazor Text="Bid Info">
+    <div>
+        <NumberChooserBlazor TextHeight="12vh" Columns="6" NumberPicker="DataContext.Model.Bid1" />
+    </div>
+    <div>
+        <GameButtonComponent CommandObject="BidCommand"
+                             Display="Place Bid" />
+        <GameButtonComponent CommandObject="PassCommand"
+                             Display="Pass" />
+    </div>
+</BaseFrameBlazor>*
