--- a/Games/Rook/Blazor/Views/RookMainView.razor
+++ b/Games/Rook/Blazor/Views/RookMainView.razor
@@ -16,7 +16,11 @@
 
 
     <StackItem>
-        @*<ParentControl VM="RookBiddingViewModel">
+       @if (DataContext.GameStatus == EnumStatusList.Bidding)
+        {
+            <BiddingComponent DataContext="DataContext" />
+        }
+        @* <ParentControl VM="RookBiddingViewModel">
             <RookBiddingView />
         </ParentControl>*@
         <ParentControl VM="RookColorViewModel">
