Fixed the bid amounts for 4 player rook.

--- a/Games/Rook/Blazor/BiddingComponent.razor
+++ b/Games/Rook/Blazor/BiddingComponent.razor
@@ -15,4 +15,4 @@
         <GameButtonComponent CommandObject="PassCommand"
                              Display="Pass" />
     </div>
-</BaseFrameBlazor>*
+</BaseFrameBlazor>
