--- a/Games/Spades4Player/_Imports.razor
+++ b/Games/Spades4Player/_Imports.razor
@@ -24,3 +24,4 @@
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.SpecializedFrames.SingleMiscPiles;
 @using BasicGameFrameworkLibrary.Core.RegularDeckOfCards;
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.TrickUIs;
+@using BasicGameFrameworkLibrary.Blazor.BasicControls.ChoicePickers;
